--- a/free-nodes/2025-10-15-free-node-subscribe-links.htm
+++ b/free-nodes/2025-10-15-free-node-subscribe-links.htm
@@ -407,16 +407,16 @@ gzip -d clash-linux-amd64-v1.18.0.gz
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-10-4-free-node-subscribe-links.htm" title="VPN百科 - 10月4日18.6M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅节点分享">VPN百科 - 10月4日18.6M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-16-vpn-node.htm" title="VPN百科 - 9月16日22.3M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅节点分享">VPN百科 - 9月16日22.3M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-23-mianfei-vpn.htm" title="VPN百科 - 9月23日19.9M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray订阅节点分享">VPN百科 - 9月23日19.9M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-9-vpn-github.htm" title="VPN百科 - 10月9日20.8M/S|免费Singbox节点/V2ray节点/Clash节点/Shadowrocket节点/SSR节点订阅节点分享">VPN百科 - 10月9日20.8M/S|免费Singbox节点/V2ray节点/Clash节点/Shadowrocket节点/SSR节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-28-vpn-free.htm" title="VPN百科 - 9月28日22.6M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点订阅节点分享">VPN百科 - 9月28日22.6M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-24-free-vpn-node.htm" title="VPN百科 - 9月24日19.7M/S|免费Clash节点/V2ray节点/SSR节点/Singbox节点/Shadowrocket节点订阅节点分享">VPN百科 - 9月24日19.7M/S|免费Clash节点/V2ray节点/SSR节点/Singbox节点/Shadowrocket节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-11-node-share.htm" title="VPN百科 - 9月11日18M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash订阅节点分享">VPN百科 - 9月11日18M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-17-node-share.htm" title="VPN百科 - 9月17日18.6M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray订阅节点分享">VPN百科 - 9月17日18.6M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-7-vpn-free.htm" title="VPN百科 - 9月7日21.9M/S|免费Shadowrocket节点/V2ray节点/Clash节点/SSR订阅节点分享">VPN百科 - 9月7日21.9M/S|免费Shadowrocket节点/V2ray节点/Clash节点/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-13-mianfei-vpn.htm" title="VPN百科 - 10月13日19.5M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点订阅节点分享">VPN百科 - 10月13日19.5M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-14-vpn-proxy.htm" title="VPN百科 - 10月14日18.2M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点订阅节点分享">VPN百科 - 10月14日18.2M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-15-free-node-subscribe-links.htm" title="VPN百科 - 10月15日21.8M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点订阅节点分享">VPN百科 - 10月15日21.8M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-23-share-vpn.htm" title="VPN百科 - 10月23日21.5M/S|免费Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点订阅节点分享">VPN百科 - 10月23日21.5M/S|免费Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-27-mianfei-vpn.htm" title="VPN百科 - 9月27日19.9M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点订阅节点分享">VPN百科 - 9月27日19.9M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-20-vpn-node.htm" title="VPN百科 - 10月20日18.4M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点订阅节点分享">VPN百科 - 10月20日18.4M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-26-top-vpn-node.htm" title="VPN百科 - 9月26日19.7M/S|免费Shadowrocket节点/Singbox节点/SSR节点/V2ray节点/Clash节点订阅节点分享">VPN百科 - 9月26日19.7M/S|免费Shadowrocket节点/Singbox节点/SSR节点/V2ray节点/Clash节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-11-vpn-free.htm" title="VPN百科 - 10月11日21.2M/S|免费V2ray节点/SSR节点/Shadowrocket节点/Singbox节点/Clash节点订阅节点分享">VPN百科 - 10月11日21.2M/S|免费V2ray节点/SSR节点/Shadowrocket节点/Singbox节点/Clash节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-25-top-vpn.htm" title="VPN百科 - 9月25日18.4M/S|免费Clash节点/V2ray节点/Singbox节点/SSR节点/Shadowrocket节点订阅节点分享">VPN百科 - 9月25日18.4M/S|免费Clash节点/V2ray节点/Singbox节点/SSR节点/Shadowrocket节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-16-vpn-github.htm" title="VPN百科 - 10月16日22.7M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点订阅节点分享">VPN百科 - 10月16日22.7M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-8-vpn-proxy.htm" title="VPN百科 - 10月8日18.2M/S|免费Clash节点/SSR节点/Singbox节点/Shadowrocket节点/V2ray节点订阅节点分享">VPN百科 - 10月8日18.2M/S|免费Clash节点/SSR节点/Singbox节点/Shadowrocket节点/V2ray节点订阅节点分享</a></li>
                     </ul>
     </div>
 </div>
@@ -428,7 +428,7 @@ gzip -d clash-linux-amd64-v1.18.0.gz
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
